Made the Update() method on the ChartBase class return a Task

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/HorizontalBarChartComponent.razor
@@ -61,7 +61,7 @@
 		return Task.CompletedTask;
 	}
 
-	private void AddData() {
+	private async Task AddData() {
 		var nowSecond = DateTime.Now.Second;
 		_barChartConfig.Data.Labels.Add(nowSecond.ToString());
 		_barDataSet.Add(new DoubleWrapper(nowSecond));
@@ -69,10 +69,10 @@
 
 		_barChartConfig.Options.Title.Text += DateTime.Now.Second.ToString();
 
-		_barChart.Update();
+		await _barChart.Update();
 	}
 
-	private void RemoveData() {
+	private async Task RemoveData() {
 		if (_barChartConfig.Data.Labels.Count > 0) {
 			_barChartConfig.Data.Labels.RemoveAt(_barChartConfig.Data.Labels.Count - 1);
 		}
@@ -83,7 +83,7 @@
 		}
 
 
-		_barChart.Update();
+		await _barChart.Update();
 	}
 
 }
