--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
@@ -1,3 +1,4 @@
+@using System.Globalization
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Handlers
 @using ChartJs.Blazor.ChartJS.Common.Handlers.OnClickHandler
@@ -13,6 +14,8 @@
 <h4>Hover over the legend items. It will print the hover event args in the text area below</h4>
 <h4>Click on the legend items and on the donut chart to show the event args</h4>
 <h5>Browse the code to see how to register a .Net/Js click/hover handler.</h5>
+
+<button class="btn btn-primary" @onclick="AddData">Add data</button>
 
 <ChartJsPieChart @ref="_doughnutChartJs" Config="@_config" Width="600" Height="300"/>
 
@@ -81,6 +84,23 @@
 
         doughnutSet.Data.AddRange(new double[] {4, 5, 6, 7});
         _config.Data.Datasets.Add(doughnutSet);
+    }
+
+    private async Task AddData()
+    {
+        var dataset = _config.Data.Datasets.LastOrDefault();
+        if (dataset == null)
+        {
+            return;
+        }
+
+        var rand = new Random();
+        var newVal = 1 + rand.NextDouble() * 10;
+        _config.Data.Labels.Add(newVal.ToString(CultureInfo.InvariantCulture));
+        dataset.Data.Add(newVal);
+        dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
+
+        await _doughnutChartJs.Update();
     }
 
     [JSInvokable]
