Fixed a circular reference issue that appears during the serialization of click event args

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Handlers/DotNetInstanceClickHandlerComponent.razor
@@ -55,13 +55,13 @@
                     AnimateRotate = true,
                     AnimateScale = true
                 },
-                Legend = new Legend()
+                Legend = new Legend
                 {
                     OnClick = new DotNetInstanceClickHandler(OnLegendClickHandler),
                     OnHover = new DotNetInstanceHoverHandler(OnLegendHoverHandler)
                 },
                 OnClick = new DotNetInstanceClickHandler(OnClickHandler),
-                Hover = new Hover()
+                Hover = new Hover
                 {
                     OnHover = new JsHoverHandler("SampleInterop.OnHover")
                 }
