--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
@@ -34,7 +34,7 @@
                 Legend = new Legend
                 {
                     Position = Position.Right,
-                    Labels = new LegendLabelConfiguration
+                    Labels = new LegendLabels
                     {
                         UsePointStyle = true
                     }
@@ -75,7 +75,7 @@
                         }
                     }
                 },
-                Hover = new LineOptionsHover
+                Hover = new Hover
                 {
                     Intersect = true,
                     Mode = InteractionMode.Y
