--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
@@ -8,7 +8,7 @@
 @using ChartJs.Blazor.Sample.Shared.Components;
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
-@using ChartJs.Blazor.Sample.Shared.Components.Handlers;
+@using ChartJs.Blazor.Sample.Shared.Components.Callbacks;
 @using ChartJs.Blazor.Sample.Shared.Components.Fun;
 @using ChartJs.Blazor;
 @using ChartJs.Blazor.Sample;
