--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
@@ -9,5 +9,5 @@
 @using ChartJs.Blazor.Sample.Shared.Components;
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
 @using ChartJs.Blazor.Sample.Shared.Components.LineChart;
-@using ChartJs.Blazor.Sample.Shared.Components.Handlers;
+@using ChartJs.Blazor.Sample.Shared.Components.Callbacks;
 @using ChartJs.Blazor.Sample.Shared.Components.Fun;
