--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/ClickAndHoverHandlerComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/ClickAndHoverHandlerComponent.razor
@@ -5,13 +5,13 @@
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.Util
-@using Newtonsoft.Json
 @using System.Text.Json
 
 <h1>Click and Hover Handlers</h1>
-<h4>Hover over the donut chart. It has a Javascript handler registered that turns its opacity to 50%</h4>
-<h4>Hover over the legend items. It will print the hover event args in the text area below</h4>
-<h4>Click on the legend items and on the donut chart to show the event args</h4>
+<h4>Hover over the chart. It has a C# lambda-method attached which prints the received event in the dotnet-console.</h4>
+<h4>Hover over the legend items. It has a Javascript-handler attached which will print the received event and args in the browser-console.</h4>
+<h4>Click on the chart. It has a C# static-method attached which prints how many times you've clicked the chart in the dotnet-console.</h4>
+<h4>Click on the legend items. It has a C# instance-method attached which adds the received event to the textarea below.</h4>
 <h5>Browse the code to see how to register a .Net/Js click/hover handler.</h5>
 
 <button class="btn btn-primary" @onclick="AddData">Add data</button>
@@ -58,7 +58,8 @@
                     OnClick = new DelegateHandler<LegendItemMouseEvent>(ShowEventAndArgs),
                     OnHover = new JavascriptHandler<LegendItemMouseEvent>("SampleInterop.PrintEventAndArgs")
                 },
-                OnClick = new DelegateHandler<ChartMouseEvent>(ChartMouseEvent),
+                OnClick = new DelegateHandler<ChartMouseEvent>(StaticInterop.ClickCounter),
+                OnHover = new DelegateHandler<ChartMouseEvent>((@event, elems) => Console.WriteLine($"Event: {@event.GetRawText()}")),
             }
         };
 
@@ -82,14 +83,9 @@
 
     public void ShowEventAndArgs(JsonElement @event, JsonElement args)
     {
-        EventArgs += args.GetRawText() + Environment.NewLine;
+        EventArgs = args.GetRawText() + Environment.NewLine + EventArgs;
         Rows = Math.Max(3, EventArgs.Split(new[] {Environment.NewLine}, StringSplitOptions.None).Length + 1);
         StateHasChanged();
-    }
-
-    public void ChartMouseEvent(JsonElement mouseEvent, object[] activeElements)
-    {
-        Console.WriteLine($"Chart Mouse Event: {mouseEvent}");
     }
 
     private void OnClear()
@@ -110,5 +106,15 @@
         dataset.BackgroundColor = dataset.BackgroundColor.IndexedValues.Append(ColorUtil.RandomColorString()).ToArray();
 
         await _doughnutChartJs.Update();
+    }
+
+    private static class StaticInterop
+    {
+        private static int s_eventCount = 0;
+
+        public static void ClickCounter(JsonElement mouseEvent, object[] activeElements)
+        {
+            Console.WriteLine($"The chart has been clicked {System.Threading.Interlocked.Increment(ref s_eventCount)} times.");
+        }
     }
 }
