--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
@@ -1,17 +1,8 @@
-@page "/test"
-
-@using System.Globalization
+﻿@using System.Globalization
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Properties
-@using ChartJs.Blazor.Util
-@using ChartJs.Blazor.ChartJS.BarChart
-@using ChartJs.Blazor.ChartJS.BarChart.Axes
-@using ChartJs.Blazor.ChartJS.Common.Enums
-@using ChartJs.Blazor.ChartJS.Common.Axes
-@using ChartJs.Blazor.ChartJS.Common.Wrappers
-@using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
 @using ChartJs.Blazor.ChartJS.Common.Handlers
 @using ChartJs.Blazor.Util
 @using System.Text.Json
@@ -52,8 +43,7 @@
                 Title = new OptionsTitle
                 {
                     Display = true,
-                    Text = new[] { "Simple Bar Chart", "with two lines of title" },
-                    FontStyle = FontStyle.Italic
+                    Text = "Sample chart with legend callbacks"
                 },
                 Responsive = true,
                 Animation = new ArcAnimation
@@ -66,7 +56,7 @@
                     Labels = new LegendLabels
                     {
                         GenerateLabels = new JavascriptHandler<LegendLabelsGenerator>("SampleInterop.CreateLabels"),
-                        Filter = new JavascriptHandler<LegendLabelFilter>("SampleInterop.AsyncFilter") // new DelegateHandler<LegendLabelFilter>(LabelsFilter) //
+                        Filter = new DelegateHandler<LegendLabelFilter>(LabelsFilter) // new JavascriptHandler<LegendLabelFilter>("SampleInterop.Filter") // 
                     }
                 }
             }
