--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/StackedBarChartComponent.razor
@@ -8,71 +8,80 @@
 
 <h1>Stacked Bar Chart</h1>
 
-<ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300"/>
+<ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300" />
 
 @code {
-	private BarConfig _config;
-	private ChartJsBarChart _barChartJs;
+    private BarConfig _config;
+    private ChartJsBarChart _barChartJs;
 
-	protected override void OnInitialized() {
-		_config = new BarConfig {
-			Options = new BarOptions {
-				Title = new OptionsTitle {
-					Display = true,
-					Text = "Sample chart from Blazor"
-				},
-				Scales = new BarScales {
-					XAxes = new List<CartesianAxis> {
-						new BarCategoryAxis {
-							BarThickness = BarThickness.Flex,
-							Stacked = true
-						}
-					}
-				},
-				Responsive = true
-			}
-		};
+    protected override void OnInitialized()
+    {
+        _config = new BarConfig
+        {
+            Options = new BarOptions
+            {
+                Title = new OptionsTitle
+                {
+                    Display = true,
+                    Text = "Sample chart from Blazor"
+                },
+                Scales = new BarScales
+                {
+                    XAxes = new List<CartesianAxis>
+                    {
+                        new BarCategoryAxis
+                        {
+                            BarThickness = BarThickness.Flex,
+                            Stacked = true
+                        }
+                    }
+                },
+                Responsive = true
+            }
+        };
 
-		_config.Data.Labels.AddRange(new[] {"A", "B", "C", "D"});
+        _config.Data.Labels.AddRange(new[] { "A", "B", "C", "D" });
 
-		var barSet1 = new BarDataset<DoubleWrapper> {
-			Label = "Red",
-			BackgroundColor = ColorUtil.RandomColorString(),
-			BorderWidth = 1,
-			HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
-			HoverBorderColor = ColorUtil.RandomColorString(),
-			HoverBorderWidth = 1,
-			BorderColor = "#ffffff",
-		};
+        var barSet1 = new BarDataset<DoubleWrapper>
+        {
+            Label = "Red",
+            BackgroundColor = ColorUtil.RandomColorString(),
+            BorderWidth = 1,
+            HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
+            HoverBorderColor = ColorUtil.RandomColorString(),
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff",
+        };
 
-		barSet1.AddRange(new double[] {4, 3, 2, 1}.Wrap());
-		_config.Data.Datasets.Add(barSet1);
+        barSet1.AddRange(new double[] { 4, 3, 2, 1 }.Wrap());
+        _config.Data.Datasets.Add(barSet1);
 
-		var barSet2 = new BarDataset<DoubleWrapper> {
-			Label = "Green",
-			BackgroundColor = ColorUtil.RandomColorString(),
-			BorderWidth = 1,
-			HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
-			HoverBorderColor = ColorUtil.RandomColorString(),
-			HoverBorderWidth = 1,
-			BorderColor = "#ffffff",
-		};
+        var barSet2 = new BarDataset<DoubleWrapper>
+        {
+            Label = "Green",
+            BackgroundColor = ColorUtil.RandomColorString(),
+            BorderWidth = 1,
+            HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
+            HoverBorderColor = ColorUtil.RandomColorString(),
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff",
+        };
 
-		barSet2.AddRange(new double[] {1, 5, 10, 15}.Wrap());
-		_config.Data.Datasets.Add(barSet2);
+        barSet2.AddRange(new double[] { 1, 5, 10, 15 }.Wrap());
+        _config.Data.Datasets.Add(barSet2);
 
-		var barSet3 = new BarDataset<DoubleWrapper> {
-			Label = "Blue",
-			BackgroundColor = ColorUtil.RandomColorString(),
-			BorderWidth = 1,
-			HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
-			HoverBorderColor = ColorUtil.RandomColorString(),
-			HoverBorderWidth = 1,
-			BorderColor = "#ffffff",
-		};
+        var barSet3 = new BarDataset<DoubleWrapper>
+        {
+            Label = "Blue",
+            BackgroundColor = ColorUtil.RandomColorString(),
+            BorderWidth = 1,
+            HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
+            HoverBorderColor = ColorUtil.RandomColorString(),
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff",
+        };
 
-		barSet3.AddRange(new double[] {5, 6, 7, 8}.Wrap());
-		_config.Data.Datasets.Add(barSet3);
-	}
-
+        barSet3.AddRange(new double[] { 5, 6, 7, 8 }.Wrap());
+        _config.Data.Datasets.Add(barSet3);
+    }
 }
