--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BarCharts/TimeBarChartComponent.razor
@@ -10,55 +10,66 @@
 
 <h1>Time Bar Chart</h1>
 
-<ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300"/>
+<ChartJsBarChart @ref="_barChartJs" Config="@_config" Width="600" Height="300" />
 
 @code {
-	private BarConfig _config;
-	private ChartJsBarChart _barChartJs;
+    private BarConfig _config;
+    private ChartJsBarChart _barChartJs;
 
-	protected override void OnInitialized() {
-		_config = new BarConfig {
-			Options = new BarOptions {
-				Title = new OptionsTitle {
-					Display = true,
-					Text = "Sample chart from Blazor"
-				},
-				Scales = new BarScales {
-					XAxes = new List<CartesianAxis> {
-						new BarTimeAxis {
-							BarPercentage = 0.75,
-							Time = new TimeOptions {
-								Unit = TimeMeasurement.Hour
-							},
-							Offset = true
-						}
-					},
-					YAxes = new List<CartesianAxis> {
-						new BarLinearCartesianAxis {
-							Ticks = new LinearCartesianTicks {
-								BeginAtZero = true
-							}
-						}
-					}
-				},
-				Responsive = true
-			}
-		};
+    protected override void OnInitialized()
+    {
+        _config = new BarConfig
+        {
+            Options = new BarOptions
+            {
+                Title = new OptionsTitle
+                {
+                    Display = true,
+                    Text = "Sample chart from Blazor"
+                },
+                Scales = new BarScales
+                {
+                    XAxes = new List<CartesianAxis>
+                    {
+                        new BarTimeAxis
+                        {
+                            BarPercentage = 0.75,
+                            Time = new TimeOptions
+                            {
+                                Unit = TimeMeasurement.Hour
+                            },
+                            Offset = true
+                        }
+                },
+                YAxes = new List<CartesianAxis>
+                {
+                        new BarLinearCartesianAxis
+                        {
+                            Ticks = new LinearCartesianTicks
+                            {
+                                BeginAtZero = true
+                            }
+                        }
+                    }
+                },
+                Responsive = true
+            }
+        };
 
-		var barSet = new BarDataset<TimeTuple<double>> {
-			Label = "My time-double dataset",
-			BackgroundColor = new[] {ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString()},
-			BorderWidth = 1,
-			HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
-			HoverBorderColor = "#020202",
-			HoverBorderWidth = 1,
-			BorderColor = "#ffffff"
-		};
+        var barSet = new BarDataset<TimeTuple<double>>
+        {
+            Label = "My time-double dataset",
+            BackgroundColor = new[] { ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString(), ColorUtil.RandomColorString() },
+            BorderWidth = 1,
+            HoverBackgroundColor = ColorUtil.ColorString(0, 0, 0, 0.1),
+            HoverBorderColor = "#020202",
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff"
+        };
 
-		var now = DateTime.Now;
-		var rnd = new Random();
-		barSet.AddRange(Enumerable.Range(2, 4).Select(i => new TimeTuple<double>((Moment) now.AddHours(i), rnd.NextDouble() * 4)));
-		_config.Data.Datasets.Add(barSet);
-	}
-
+        var now = DateTime.Now;
+        var rnd = new Random();
+        barSet.AddRange(Enumerable.Range(2, 4).Select(i => new TimeTuple<double>((Moment)now.AddHours(i), rnd.NextDouble() * 4)));
+        _config.Data.Datasets.Add(barSet);
+    }
 }
